# active_object

./: CMakeLists.txt  README.md  active_objects.pptx
example/: client.cpp  server.cpp
src/: command.cpp  command.h  concurrent_queue.h  executor.h  future_object.h  interface_proxy.cpp  interface_proxy.h
